Tweak to fix title overlap on small screens -- not intended to count towards grade.

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,15 +8,21 @@ body {
   align-items: center;
   justify-content: center;
   background: radial-gradient(darkslategray, cornflowerblue, darkslategray);
+  position: relative;
 }
 
 .game-title {
   position: absolute;
-  top: 10px;
+  top: -20px;
   left: 0;
   right: 0;
   text-align: center;
   font-size: 80px;
   font-family: "Bungee Shade";
   color: white;
+  margin-top: 0;
+}
+
+canvas {
+  margin-top: 125px;
 }
